--- a/eUseControl.Web/bin/eUseControl.Web.dll.config
+++ b/eUseControl.Web/bin/eUseControl.Web.dll.config
@@ -5,23 +5,12 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <remove name="LocalSqlServer" />
-	<add name="ParawaDB"
-		 connectionString="Data Source=server.cybersnets.com;
-		 User Id=sa;
-		 Password=Masterpasswd228!;
-		 Initial Catalog=ErjanDB;
-		 Encrypt=False;
-		 TrustServerCertificate=False;
-		 ApplicationIntent=ReadWrite;
-		 MultiSubnetFailover=False;
-		 MultipleActiveResultSets=True;
-		 App=EntityFramework"
-		 providerName="System.Data.SqlClient"/>
+	<add name="ParawaDB" connectionString="Data Source=server.cybersnets.com;    User Id=sa;    Password=Masterpasswd228!;    Initial Catalog=ErjanDB;    Encrypt=False;    TrustServerCertificate=False;    ApplicationIntent=ReadWrite;    MultiSubnetFailover=False;    MultipleActiveResultSets=True;    App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
