--- a/eUseControl.BusinessLogic/eUseControl.BusinessLogic.csproj
+++ b/eUseControl.BusinessLogic/eUseControl.BusinessLogic.csproj
@@ -61,9 +61,12 @@
     <Compile Include="Core\AdminApi.cs" />
     <Compile Include="Core\UserApi.cs" />
     <Compile Include="BussinesLogic.cs" />
+    <Compile Include="DBModel\PostsContext.cs" />
     <Compile Include="DBModel\UserContext.cs" />
+    <Compile Include="Interfaces\IPosts.cs" />
     <Compile Include="Interfaces\IRegister.cs" />
     <Compile Include="Interfaces\ISession.cs" />
+    <Compile Include="PostsBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionBL.cs" />
     <Compile Include="DBModel\SessionContext.cs" />
