--- a/eUseControl.Web/Web.config
+++ b/eUseControl.Web/Web.config
@@ -20,6 +20,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	  <customErrors mode="Off"  >
+		  <error statusCode="404" redirect="~/Error/NotFound"/>
+	  </customErrors>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <pages>
