--- a/eUseControl.Web/eUseControl.Web.csproj
+++ b/eUseControl.Web/eUseControl.Web.csproj
@@ -212,7 +212,6 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\luna.js" />
     <Content Include="Scripts\pace.min.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
@@ -236,6 +235,7 @@
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
     <Compile Include="Extentions\HttpContextExtensions.cs" />
     <Compile Include="Global.asax.cs">
@@ -267,6 +267,7 @@
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Contact\Index.cshtml" />
     <Content Include="Views\Register\Index.cshtml" />
+    <Content Include="Views\Error\NotFound.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
